--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -84,8 +84,10 @@ $(window).load(function() {
     domutil.setselect("#c_uc31endyear2", yearlist);
     domutil.setselect("#c_uc31styear", yearlist);
     domutil.setselect("#c_uc31styear2", yearlist);
-    domutil.setselect("#c_uc31swyear2", yearlist);
-    domutil.setselect("#c_uc31swyear1", yearlist);
+    domutil.setselect("#c_uc31swyear1from", yearlist);
+    domutil.setselect("#c_uc31swyear2from", yearlist);
+    domutil.setselect("#c_uc31swyear1to", yearlist);
+    domutil.setselect("#c_uc31swyear2to", yearlist);
 
 	//if(domutil.getradiovalue("#c_uc32_per")!="days")
 	//	$("#c_uc32_daterange").hide();	
