--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -80,6 +80,7 @@ $(window).load(function() {
 	domutil.setselect("#c_uc32styear",yearlist);
 	domutil.setselect("#c_uc32_seasonyear",yearlist);
 
+    //Added by Chris Pantazis to load the same yearlist to UC 03.01 templates
     domutil.setselect("#c_uc31endyear", yearlist);
     domutil.setselect("#c_uc31endyear2", yearlist);
     domutil.setselect("#c_uc31styear", yearlist);
