fixed minor bug in uc_03_1_index.html

--- a/unexe/templates/summary.html
+++ b/unexe/templates/summary.html
@@ -134,7 +134,7 @@
                             <td><img src="{{ STATIC_URL }}icon/sad.png" /></td>
                         </tr>
                     </table>
-                <strong><em>If you miss a target, the target consumption is adjusted to the next one. </em></strong>
+                <strong><em>If you miss a target, the target consumption is adjusted to the next one. The more smilies you gather, the more water efficient is your household.</em></strong>
                 </div>
                 <div class="col-md-6">
                     <p class="text-center bg-primary"><strong>{% trans "WATER COST" %}</strong></p>
