--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -39,7 +39,7 @@
             <div class="col-md-12" id="prd_sw">
                 <p><strong>{% trans "Please Select Period" %}</strong></p>
                 <label>
-                    <input type="radio" id="period_sw" name="period_sw" value="0" onclick="hideYearSW()"/> This Year
+                    <input type="radio" id="period_sw" checked="checked" name="period_sw" value="0" onclick="hideYearSW()"/> This Year
                 </label>
                 <label>
                     <input type="radio" id="period_sw" name="period_sw" value="1" onclick="hideYearSW()"  /> Previous Year
@@ -56,7 +56,7 @@
             <div class="col-md-12" id="prd_day">
                 <p><strong>{% trans "Please Select Period" %}</strong></p>
                 <label>
-                    <input type="radio" id="period_d" name="period_d" value="7days" onclick="hideCalendars()"/> Last 7 Days
+                    <input type="radio" id="period_d" checked="checked" name="period_d" value="7days" onclick="hideCalendars()"/> Last 7 Days
                 </label>
                 <label>
                     <input type="radio" id="period_d" name="period_d" value="month" onclick="hideCalendars()"  /> Last Month Days
@@ -73,7 +73,7 @@
             <div class="col-md-12" id="prd_mon">
                 <p><strong>{% trans "Please Select Period" %}</strong></p>
                 <label>
-                    <input type="radio" id="period_m" name="period_m" value="3" onclick="hideDateYear()"/> Last 3 Months
+                    <input type="radio" id="period_m" checked="checked" name="period_m" value="3" onclick="hideDateYear()"/> Last 3 Months
                 </label>
                 <label>
                     <input type="radio" id="period_m" name="period_m" value="6" onclick="hideDateYear()"  /> Last 6 Months
@@ -281,6 +281,8 @@
                 $("#only10").show();
             }else{
                 $("#only10").hide();
+                $("#resolution2").val('total');
+                $("#prd_sw").hide();
             }
             //show period if applicable, too
             togglePeriod();
@@ -290,6 +292,7 @@
             $("#prd_day").hide();
             $("#prd_sw").hide();
             $(".date_year").hide();
+            $(".calendar").hide();
 
             $('.sw_year').hide();
             var val1 = $('#resolution1').val();
@@ -299,6 +302,7 @@
             }
             if ((val1 == 'daily' || val1 == 'daily_capita')){
                 $("#prd_day").show();
+                $("#prd_sw").hide();
             }
             if ((val2 == 'summer_winter')){
                 $("#prd_sw").show();
