--- a/unexe/templates/casestudy/ukcsregistration.html
+++ b/unexe/templates/casestudy/ukcsregistration.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block pagetitle %}iWidget - UK Customer Registration{% endblock %}
+{% block pagetitle %}iWidget - UK Household Registration{% endblock %}
 {% block pagecontent %}
 <script type="text/javascript">
 </script>
@@ -11,25 +11,25 @@
 		    <div class="panel-title">{% trans "Welcome to iWIDGET account registration" %}</div>
 		 </div>
 		 <div class="panel-body">
-		 <div id="signup-msg"></div>
-		 <form accept-charset="UTF-8" action="{% url 'login' %}" method="POST" role="form" id="login-form">
+		 <div id="ukcsreg-msg"></div>
+		 <form accept-charset="UTF-8" action="{% url 'ukcsregistrationsave' %}" method="POST" role="form" id="ukcsreg-form">
 			{% csrf_token %}
             <fieldset>
 				<div class="form-group">
 					<label>First Name</label>
-			    	<input class="form-control" placeholder="First Name" name="fname" id="fname" type="text" required="true">
+			    	<input class="form-control" placeholder="First Name" name="ukcsregfname" id="ukcsregfname" type="text">
 			    </div>
 			    <div class="form-group">
 			    	<label>Last Name</label>
-			    	<input class="form-control" placeholder="Last Name" name="lname" id="lname" type="text" value="" required="true">
+			    	<input class="form-control" placeholder="Last Name" name="ukcsreglname" id="ukcsreglname" type="text" value="">
 			    </div>
 				<div class="form-group">
 					<label>Email</label>
-			    	<input class="form-control" placeholder="Email" name="email" id="email" type="text" required="true">
+			    	<input class="form-control" placeholder="Email" name="ukcsregemail" id="ukcsregemail" type="text" required="true" email="true">
 			    </div>
 			    <div class="form-group">
 			    	<label>Address</label>
-			    	<textarea class="form-control" rows="3" name="address" id="address" placeholder="Address" required="true"></textarea>
+			    	<textarea class="form-control" rows="3" name="ukcsregaddress" id="ukcsregaddress" placeholder="Address" required="true"></textarea>
 			    	<!--<input class="form-control" placeholder="Address" name="address" id="address" type="text" value="" required="true"> -->
 			    </div>			    
 			    	<!--
@@ -38,7 +38,7 @@
 			    	</div>
 					-->
 				<div class="form-group">
-			    		<button class="btn btn-lg btn-primary btn-block" type="button" onClick="apputil.sendToserver('#login-form');">{% trans "Register" %}</button>
+			    		<button class="btn btn-lg btn-primary btn-block" type="button" onClick="apputil.sendToserver('#ukcsreg-form');">{% trans "Register" %}</button>
 			    </div>
 		    </fieldset>
 		</form>
