--- a/unexe/templates/casestudy/ukcsregistration.html
+++ b/unexe/templates/casestudy/ukcsregistration.html
@@ -10,25 +10,25 @@
 		<div class="panel-heading">
 		    <div class="panel-title">{% trans "Welcome to iWIDGET account registration" %}</div>
 		 </div>
-		 <div class="panel-body">
+		 <div class="panel-body"><p class="text-warning">* Required</p>
 		 <div id="ukcsreg-msg"></div>
 		 <form accept-charset="UTF-8" action="{% url 'ukcsregistrationsave' %}" method="POST" role="form" id="ukcsreg-form">
 			{% csrf_token %}
             <fieldset>
 				<div class="form-group">
-					<label>First Name</label>
+					<label>First Name:</label>
 			    	<input class="form-control" placeholder="First Name" name="ukcsregfname" id="ukcsregfname" type="text">
 			    </div>
 			    <div class="form-group">
-			    	<label>Last Name</label>
+			    	<label>Last Name:</label>
 			    	<input class="form-control" placeholder="Last Name" name="ukcsreglname" id="ukcsreglname" type="text" value="">
 			    </div>
 				<div class="form-group">
-					<label>Email</label>
+					<label>Email: *</label>
 			    	<input class="form-control" placeholder="Email" name="ukcsregemail" id="ukcsregemail" type="text" required="true" email="true">
 			    </div>
 			    <div class="form-group">
-			    	<label>Address</label>
+			    	<label>Address: *</label>
 			    	<textarea class="form-control" rows="3" name="ukcsregaddress" id="ukcsregaddress" placeholder="Address" required="true"></textarea>
 			    	<!--<input class="form-control" placeholder="Address" name="address" id="address" type="text" value="" required="true"> -->
 			    </div>			    
