--- a/unexe/templates/usecase/c_uc3.4.html
+++ b/unexe/templates/usecase/c_uc3.4.html
@@ -1,6 +1,102 @@
 {% load sekizai_tags %}
 {% load i18n %}
 {% block c_uc3.4 %}
+<script type="text/javascript">
+var start 	 = dateutil.getdateyear("{{stdate}}");
+var end   	 = dateutil.getdateyear("{{endate}}");
+var yearlist = dateutil.getyearlist(parseInt(start),parseInt(end));
+
+function uc34Chart(data)
+{
+	//alert(data[0]["chart"]);
+	//alert(JSON.stringify(data["effdata"]));
+	
+	var w = domutil.getdivwidth("c_uc34chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
+	var dim = {"width":w,"height":450}; //width and height of chart container	
+	chartutil.uc32barplot1("#c_uc34chart",dim,data["chart"]);
+	
+	var values= data["yourdata"]["month"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc34month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+
+	values    = data["yourdata"]["quarter"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc34quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+
+	values    = data["yourdata"]["half"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc34half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+
+	values    = data["yourdata"]["year"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc34yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+
+	values= data["effdata"]["1 Month"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc34Month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+
+	values= data["effdata"]["3 Month"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc34Quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+
+	values= data["effdata"]["6 Month"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];	
+	$("#c_uc34Half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	
+	values= data["effdata"]["12 Month"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];	
+	$("#c_uc34Yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");		
+}
+
+$(window).load(function() {
+	var data = jQuery.parseJSON("{{c_uc34data|escapejs}}");	
+	if(data==null)
+		return;	
+
+	//reset form when page refresh
+	formutil.resetForm('#c_uc34-form');
+	
+	domutil.setselect("#c_uc34endyear",yearlist);
+	domutil.setselect("#c_uc34styear",yearlist);
+	domutil.setselect("#c_uc34_seasonyear",yearlist);
+	
+	var id = window.location.hash;
+    if(domutil.hasCssclass("#c_uc34container","hide") && id=="#cuc34") //tab id value, need to make global to make effective and avoid error
+    {
+    	domutil.removeCssclass("#c_uc34container","hide");
+    	uc34Chart(data);
+    }//--end if	
+	
+});
+
+function c_uc34toggle()
+{
+	var radioval = domutil.getradiovalue('c_uc34_per');
+	if(radioval=="season")
+	{
+		domutil.removeCssclass('#c_uc34_season','hide');
+		domutil.setCssclass('#c_uc34_daterange','hide');
+	}
+	else if(radioval=="days")
+	{
+		domutil.setCssclass('#c_uc34_season','hide');
+		domutil.removeCssclass('#c_uc34_daterange','hide');		
+	}
+	else
+	{
+		domutil.setCssclass('#c_uc34_daterange','hide');
+		domutil.setCssclass('#c_uc34_season','hide');
+	}	
+}
+</script>
 
 {% if c_uc34data|escapejs == "null" %}
 <div class="jumbotron">
@@ -124,7 +220,7 @@
 		<div class="col-md-4" id="c_uc34donutchart"></div>
 		<div class="col-md-3">
 		    <div class="panel panel-primary">
-		        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
+		        <div class="panel-heading">{% trans "EFFICIENT USER SUMMARY" %}</div>
 		        <ul class="list-group list-group-flush text-center">
 		            <li id="c_uc34household" class="list-group-item"></li>
 		            <li id="c_uc34occupant" class="list-group-item"></li>
@@ -142,11 +238,11 @@
 		</div>
 			
 		<div class="row hide" id="c_uc34container">
-			<div id="c_uc34title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>	
+			<div id="c_uc34title"><p class="bg-primary text-center"><strong>{% trans "Your last 12 Months bill comparison vs the most efficient household" %}</strong></p></div>	
 			<div class="col-md-7" id="c_uc34chart"></div>
 			<div class="col-md-5" id="c_uc34summary">
 			    <div class="panel panel-primary">
-			        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
+			        <div class="panel-heading">{% trans "EFFICIENT USER SUMMARY" %}</div>
 			        <ul class="list-group list-group-flush">
 				        <li class="list-group-item" id="c_uc34Yearly"></li>
 				        <li class="list-group-item" id="c_uc34Half"></li>
