Big fix: map display

--- a/unexe/templates/base.html
+++ b/unexe/templates/base.html
@@ -123,7 +123,7 @@ $(window).load(function() {
 	*/
 	ajaxutil.ajaxEffect();
 	{% if user.is_authenticated %}
-		{% if not user.is_staff and user.is_admin %}
+		{% if not user.is_staff and not user.is_admin %}
 			var initval = new Array();
 			initval[0] 	= "{{household.address}}"; //household address
 			initval[1] 	= "{{household.num_of_occupant}}"; //
