--- a/unexe/templates/usecase/c_uc4.1.html
+++ b/unexe/templates/usecase/c_uc4.1.html
@@ -2,6 +2,79 @@
 {% load i18n %}
 {% block c_uc4.1 %}
 
+<script type="text/javascript">
+var start = dateutil.getdateyear("{{stdate}}");
+var end   = dateutil.getdateyear("{{endate}}");
+var yearlist = dateutil.getyearlist(parseInt(start),parseInt(end));
+
+function uc41Chart(data)
+{
+	var w = domutil.getdivwidth("c_uc41chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
+	var dim = {"width":w,"height":450}; //width and height of chart container	
+	chartutil.uc32barplot1("#c_uc41chart",dim,data["chart"]);
+	
+	var values= data["electdata"]["month"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+
+	var values= data["electdata"]["quarter"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+
+	var values= data["electdata"]["half"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+
+	var values= data["electdata"]["year"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+
+	var values= data["waterdata"]["month"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41Month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+
+	var values= data["waterdata"]["quarter"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41Quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+
+	var values= data["waterdata"]["half"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41Half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+
+	var values= data["waterdata"]["year"];
+	household = values["sum_units"];
+	occupant  = values["unit_person"];
+	$("#c_uc41Yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	
+}
+
+$(window).load(function() {
+	var data = jQuery.parseJSON("{{c_uc41data|escapejs}}");
+	if(data==null)
+		return;   
+	
+	//on page load reset form
+	formutil.resetForm('#c_uc41-form');
+	
+	
+	//get tab value and if this tab is selected then draw the chart 
+	var id = window.location.hash;
+    if(domutil.hasCssclass("#c_uc41container","hide") && id=="#cuc41") //tab id value, need to make global to make effective and avoid error
+    {
+    	domutil.removeCssclass("#c_uc41container","hide"); 	
+    	uc41Chart(data);
+    }//--end if	
+});
+
+</script>
+
 {% if c_uc41data|escapejs == "null" %}
 <div class="jumbotron">
   <h2>{% trans "Welcome to iWIDGET" %}!</h2>
@@ -20,99 +93,21 @@
 		<div id="c_uc41-msg"></div>
 		<form class="form-inline" id="c_uc41-form" role="form" method="POST" action="{% url 'c_uc41' %}">
 			{% csrf_token %}  
-		<!-- 
-		<select id="c_uc41select" class="form-control" required="true" onchange="c_uc41disabled();">		
-		<option value="summer">{% trans "Summer" %}</option>
-		<option value="winter">{% trans "Winter" %}</option>
-		<option value="autumn">{% trans "Autumn" %}</option>
-		<option value="spring">{% trans "Spring" %}</option>		
-		<option value="night">{% trans "Night Usage" %}</option>
-		<option value="day">{% trans "Day usage" %}</option>
-		</select>
-		<select id="c_uc41year" class="form-control" required="true"></select>
-		-->
+
 		<label class="radio inline c_uc41period">
-			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="season" onchange="c_uc41toggle();" /> Select Season
-		</label>		
-		<label class="radio inline c_uc41period">
-			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="days"  onchange="c_uc41toggle();" /> Specify Period
+			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="3" /> Next 3 Months
 		</label>
 		<label class="radio inline c_uc41period">
-			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="3" onclick="c_uc41toggle();"/> Last 3 Months
-		</label>
-		<label class="radio inline c_uc41period">
-			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="6" onclick="c_uc41toggle();"/> Last 6 Months
+			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="6" /> Next 6 Months
 		</label>		
 		<label class="radio inline c_uc41period">
-			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="12" onclick="c_uc41toggle();"/> Last 12 Months
+			<input type="radio" name="c_uc41_per" id="c_uc41_per" value="12" /> Next 12 Months
 		</label>	
-		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc41-form');">{% trans "Compare" %}</button>
+		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc41-form');">{% trans "Forecast" %}</button>
 		</form>     
 		</div>
 	 </div>
 	 <br/>
-	 <div class="row" id="_uc41_daterange">
-	 	<div class="form-inline col-md-6 hide" id="c_uc41_season">
-			<select id="c_uc41_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
-			</select>
-			<select id="c_uc41_seasonyear" class="form-control" required="true"></select>	 				 	
-	 	</div>	 
-		<div class="form-inline col-md-6 hide" id="c_uc41_daterange">
-		 	<div class="form-group">
-			<select id="c_uc41stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
-			</select>
-			</div>
-			<div class="form-group">
-			<select id="c_uc41styear" class="form-control" required="true">
-
-			</select>			
-			</div>
-			TO
-		 	<div class="form-group">
-			<select id="c_uc41endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
-			</select>
-			</div>		
-		 	<div class="form-group">
-			<select id="c_uc41endyear" class="form-control" required="true"></select>
-			</div>					
-		 <!-- 
-			 <div class="form-group col-md-3">
-			 <div class="bfh-datepicker" data-min="{{stdate}}" data-max="{{endate}}" data-date="{{stdate}}" data-name="stdate" id="stdate" data-format="d-m-y"></div>
-			 </div>
-			 <div class="form-group col-md-3">
-			 	<div class="bfh-datepicker" data-min="{{stdate}}" data-max="{{endate}}" data-date="{{endate}}" data-name="endate" id="endate" data-format="d-m-y"></div>
-			 </div>
-		-->
-		</div>	 	
-	 </div>
     </div>    
 	<!-- End chart menu/toolbar -->
 
@@ -124,44 +119,44 @@
 		<div class="col-md-4" id="c_uc41donutchart"></div>
 		<div class="col-md-3">
 		    <div class="panel panel-primary">
-		        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
+		        <div class="panel-heading">{% trans "WATER USAGE SUMMARY" %}</div>
 		        <ul class="list-group list-group-flush text-center">
 		            <li id="c_uc41household" class="list-group-item"></li>
 		            <li id="c_uc41occupant" class="list-group-item"></li>
+					<li class="list-group-item"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>		            
 		        </ul>
 		    </div>
 		    <div class="panel panel-primary">
-		        <div class="panel-heading">{% trans "YOUR SUMMARY" %}</div>
+		        <div class="panel-heading">{% trans "ELECTRICITY USAGE SUMMARY" %}</div>
 		        <ul class="list-group list-group-flush text-center">
 		            <li id="c_uc41hhold" class="list-group-item"></li>
 		            <li id="c_uc41occup"  class="list-group-item"></li>
-		            <li class="list-group-item"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>
 		        </ul>
 		    </div>		    
 		</div>		
 		</div>
 			
 		<div class="row hide" id="c_uc41container">
-			<div id="c_uc41title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>	
+			<div id="c_uc41title"><p class="bg-primary text-center"><strong>Your last 12 months Water bill comparison with Electric bill associated with water use</strong></p></div>	
 			<div class="col-md-7" id="c_uc41chart"></div>
 			<div class="col-md-5" id="c_uc41summary">
 			    <div class="panel panel-primary">
-			        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
+			        <div class="panel-heading">{% trans "WATER USAGE SUMMARY" %}</div>
 			        <ul class="list-group list-group-flush">
 				        <li class="list-group-item" id="c_uc41Yearly"></li>
 				        <li class="list-group-item" id="c_uc41Half"></li>
 				        <li class="list-group-item" id="c_uc41Quarter"></li>
 				        <li class="list-group-item" id="c_uc41Month"></li>
+						<li class="list-group-item text-center"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>				        
 			        </ul>
 			    </div>
 			    <div class="panel panel-primary">
-			        <div class="panel-heading">{% trans "YOUR SUMMARY" %}</div>
+			        <div class="panel-heading">{% trans "ELECTRICITY USAGE SUMMARY" %}</div>
 			        <ul class="list-group list-group-flush">
 				        <li class="list-group-item" id="c_uc41yearly"></li>
 				        <li class="list-group-item" id="c_uc41half"></li>
 				        <li class="list-group-item" id="c_uc41quarter"></li>
 				        <li class="list-group-item" id="c_uc41month"></li>
-			            <li class="list-group-item text-center"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>
 			        </ul>
 			    </div>				    				
 			</div>		
