--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -1,5 +1,9 @@
 {% load sekizai_tags %}
 {% load i18n %}
+
+{% addtoblock "css" %}
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/custom_03_01.css">
+{% endaddtoblock %}
 <div class="panel panel-default">
     <!-- chart menu/toolbar -->
     <div class="panel-heading clearfix" id="chartcontrol">
@@ -87,6 +91,35 @@
                 <label>
                     <input type="radio" id="period_m" name="period_m" value="custom2" onclick="showDateYear2()" /> Specify Two Periods
                 </label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="prd_hrly">
+                <p><strong>{% trans "Please Select Period" %}</strong></p>
+                <label>
+                    <input type="radio" id="period_h" checked="checked" name="period_h" value="today" onclick="hideSelectDay()"/> {% trans "Today" %}
+                </label>
+                <label>
+                    <input type="radio" id="period_h" name="period_h" value="yesterday" onclick="hideSelectDay()"  /> {% trans "Yesterday" %}
+                </label>
+                <label>
+                    <input type="radio" id="period_h" name="period_h" value="custom1" onclick="showSelectDay1();" /> {% trans "Specify Day" %}
+                </label>
+                <label>
+                    <input type="radio" id="period_h" name="period_h" value="custom2" onclick="showSelectDay2()" /> {% trans "Compare Two Days" %}
+                </label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 select_day" id="select_day1">
+                <div class="form-group">
+                    <p>{% trans "Select Day" %}: <input type="text" id="day1" class="datepicker"></p>
+                </div>
+            </div>
+            <div class="col-md-6 select_day" id="select_day2">
+                <div class="form-group">
+                    <p>{% trans "Select 2nd Day" %}: <input type="text" id="day2" class="datepicker"></p>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -235,6 +268,7 @@
         $(".datepicker").datepicker({dateFormat: "yy-mm-dd"});
         $(".des2").hide();
         $("#prd_mon").hide();
+        $("#prd_hrly").hide();
         $("#prd_day").hide();
         $("#prd_sw").hide();
         $(".date_year").hide();
@@ -247,7 +281,8 @@
             var view = $("#resolution2").val();
             var period_m = $("input[name=period_m]:checked").val();
             var period_d = $("input[name=period_d]:checked").val();
-            var period_sw= $("input[name=period_sw]:checked").val();
+            var period_sw = $("input[name=period_sw]:checked").val();
+            var period_h = $("input[name=period_h]:checked").val();
             var stmonth1 = $("#c_uc31stmonth").val();
             var styear1 = $("#c_uc31styear").val();
             var endmonth1 = $("#c_uc31endmonth").val();
@@ -261,19 +296,27 @@
             var sw_styear2 = $("#c_uc31swyear2from").val();
             var sw_endyear2 = $("#c_uc31swyear2to").val();
 
+            var day1 = $("#day1").val();
+            var day2 = $("#day2").val();
             var from1 = $("#from1").val(); //daily from (date value)
             var to1 = $("#to1").val(); //daily to (date value)
             $("#chart_panel").empty().load("/uc_03_1/compare/" + username + "/?ajax=&step=" + step + "&view=" + view + "&period_m="
                     + period_m + "&stm1=" + stmonth1 + "&sty1=" + styear1 + "&endm1=" + endmonth1 + "&endy1=" + endyear1+ "&stm1="
                     + stmonth1 + "&sty1=" + styear1 + "&endm1=" + endmonth1 + "&endy1=" + endyear1 + "&sty1="
                     + styear1 + "&endm1=" + endmonth1 + "&endy1=" + endyear1+ "&stm2=" + stmonth2 + "&sty2=" + "&period_sw=" + period_sw
-                    + "&sw_styr1=" + sw_styear1 + "&sw_endyr1=" + sw_endyear1+ "&sw_styr2=" + sw_styear2 + "&sw_endyr2=" + sw_endyear2
-                    + styear2 + "&endm2=" + endmonth2 + "&endy2=" + endyear2 + "&period_d=" + period_d + "&from1=" + from1 +"&to1=" + to1);
+                    + "&sw_styr1=" + sw_styear1 + "&sw_endyr1=" + sw_endyear1+ "&sw_styr2=" + sw_styear2 + "&sw_endyr2=" + sw_endyear2 + "&day1=" + day1 +"&day2=" + day2
+                    + styear2 + "&endm2=" + endmonth2 + "&endy2=" + endyear2 + "&period_d=" + period_d + "&from1=" + from1 +"&to1=" + to1 + "&period_h=" + period_h);
         }
 
         function toggleDeserialization(){
             $(".des2").hide();
             var val = $('#resolution1').val();
+            if (val == 'hourly' || val == '15min'){
+                $("#prd_hrly").show();
+                hideSelectDay();
+            }else{
+                $("#prd_hrly").hide();
+            }
             if (val == 'daily' || val == 'daily_capita' || val == 'monthly' || val == 'monthly_capita' || val == 'monthly_cost'){
                 $("#res37").show();
             }
@@ -351,5 +394,20 @@
             $(".calendar").hide();
             $("#calendar1").show();
             $("#calendar2").show();
+        }
+
+        function hideSelectDay(){
+            $(".select_day").hide();
+        }
+
+        function showSelectDay1(){
+            $(".select_day").hide();
+            $("#select_day1").show();
+        }
+
+        function showSelectDay2(){
+            $(".select_day").hide();
+            $("#select_day1").show();
+            $("#select_day2").show();
         }
     </script>
